# diff-tools

./: README.md  main.py  pyproject.toml  results.csv
bash_scripts/: org_downloads.sh  tmux-pd
model_runner/: bayes_hypers.py  config.yaml
model_runner/src/dashboard/: app.py
model_runner/src/grid_search/: grid_search.py
model_runner/src/optuna_search/: optuna_search.py
model_runner/src/param_search/: base_param_search.py  loader.py
model_runner/src/results_collectors/: base_collector.py  regex_collector.py
model_runner/src/runners/: base_runner.py  params.py  run_result.py  subprocess_runner.py
model_runner/templates/: config.yaml  param_grid.yaml
model_runner/tests/: test_abstract_bases.py  test_grid_search.py  test_loader.py  test_optuna_search.py  test_regex_collector.py  test_run_params.py  test_subprocess_runner.py
